taloscluster/default_deny_internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: internal
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
